AFL Logo's not shown
Categories
(Core :: SVG, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox104 | --- | unaffected |
| firefox105 | --- | unaffected |
| firefox106 | --- | fixed |
People
(Reporter: spowd, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(5 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/537.36
Steps to reproduce:
go to https://afl.com.au/
Actual results:
the football club logo's dont show on the top of the website
Expected results:
as shown in the picture those logo's should show
| Reporter | ||
Comment 1•3 years ago
|
||
hope that helps with another fullscreen screenshot of what it looks like an what it should look like, those logo's should be showing up the top of the page , as shown in picture 1
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Reporter | ||
Comment 3•3 years ago
|
||
this screenshot taken in Google Chome is what it should look like in Firefox Nightly
Comment 4•3 years ago
|
||
Reproduced if the browser window width > approx. 1380px.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b6d4cc392199eac68b7641fe6ce2be73a84381f6&tochange=76c1fb5130dcd9f4562826d42194ebf74ca268c8
Comment 5•3 years ago
|
||
:TYLin, since you are the author of the regressor, bug 1340715, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•3 years ago
|
||
Matches other browsers and makes sense that width="100%" would behave
the same as width: 100% via CSS, I guess.
Updated•3 years ago
|
| Assignee | ||
Comment 7•3 years ago
|
||
Drive-by, but this should be more correct, since I'm not sure how this
code would handle mSVGView otherwise, which is in effect on the relevant
page.
Comment 11•3 years ago
|
||
Comment 12•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/3f3f7b8d088e
https://hg.mozilla.org/mozilla-central/rev/e1af36b99512
Description
•