Bug 1790167 - Make percent isize also fall back to fallback intrinsic size. r=TYLin

Matches other browsers and makes sense that width="100%" would behave
the same as width: 100% via CSS, I guess.

Differential Revision: https://phabricator.services.mozilla.com/D157021